# syukurin

./: .dockerignore  .editoconfig  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  main.py  pyproject.toml
models/: base.py  wedding.py
server/: main.py  models.py
