[tool.poetry]
name = "syukurin"
version = "0.1.0"
description = ""
authors = ["Eri Wiana <eriwiana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
tortoise-orm = "^0.19.3"
pre-commit = "^3.3.1"
fastapi-restful = "^0.4.3"
uvicorn = "^0.22.0"
jinja2 = "^3.1.4"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
